Cleaned up some minor formatting.

--- a/Chap1.1.tex
+++ b/Chap1.1.tex
@@ -173,9 +173,19 @@ Prove that
 \problemAnswer{
 \begin{enumerate}[a)]
   \item We use the notation $AB$ to denote intersections and $A+B$ to denote unions, and $A^c$ to denote the complement of $A$ relative to some set $\Omega$ which is a superset of the sets in our discourse. Then the difference between two sets may be written as an intersection, $A - B = AB^c$. Then
-$$(A-B) \cap C = AB^cC = AB^cC + \emptyset = ACB^c + ACC^c = AC(B^c + C^c) = AC(BC)^c = (A \cap C) - (B \cap C) $$
+$$(A-B) \cap C      =
+         AB^cC      =
+  AB^cC + \emptyset =
+      ACB^c + ACC^c =
+      AC(B^c + C^c) =
+           AC(BC)^c =
+      (A \cap C) - (B \cap C) $$
   \item To show this we state the definition $A \bigtriangleup B = AB^c + A^cB$. Then
-$$ (A \cup B) - (A \cap B) = (A+B)(AB)^c = (A+B)(A^c+B^c) = AA^c + AB^c + A^cB + BB^c = AB^c + A^cB = A \bigtriangleup B $$
+$$ (A \cup B) - (A \cap B)      =
+   (A+B)(AB)^c = (A+B)(A^c+B^c) =
+   AA^c + AB^c + A^cB + BB^c    = 
+   AB^c + A^cB                  = 
+   A \bigtriangleup B $$
 \end{enumerate}
 }
 %% I would like to annotate this with rules, either underneath each step, or as a
@@ -197,7 +207,7 @@ $$\left(\bigcup_\alpha A_\alpha\right) \cap \left(\bigcup_\alpha B_\alpha\right)
   \bigcup_\alpha \left(A_\alpha\ \cap \ \bigcap_\alpha B_\alpha^c\right) $$
 Since $\bigcap_\alpha B_\alpha^c \subset B_\alpha^c$ for each $\alpha$, we can see clearly that our set on the left is a subset of the one on the .
 }
-\end{homeworkProblem}
+\end{homeworkProblem}\\\\\\\\\\\\\\
 
 
 \begin{homeworkProblem}
@@ -237,7 +247,7 @@ $$\bigcup_{n=1}^\infty \left[ a+\frac{1}{n}, b-\frac{1}{n} \right] =
 $$ \bigcap_{n=1}^\infty \left(a-\frac{1}{n},b+\frac{1}{n}\right) = \lim_{n\rightarrow\infty} \left(a-{1 \over n}, b + {1 \over n}\right) = \left[a,b\right]$$
 \end{enumerate}
 }
-\end{homeworkProblem}
+\end{homeworkProblem}\\\\\\\\
 
 
 \begin{homeworkProblem}
