--- a/Chap1.1.tex
+++ b/Chap1.1.tex
@@ -20,15 +20,15 @@
 \headsep=0.25in         %
 
 % Homework Specific Information
-\newcommand{\hmwkTitle}{Introductory Real Analyis Exercises}
-\newcommand{\hmwkAssignment}{Chaper 1.1}
-\newcommand{\hmwkBookAuthors}{A.Kolmogorov \& S.Fomin}
-\newcommand{\hmwkAuthorName}{Max Suica}
+\newcommand{\Title}{Introductory Real Analyis Exercises}
+\newcommand{\Assignment}{Chaper 1.1}
+\newcommand{\BookAuthors}{A.Kolmogorov \& S.Fomin}
+\newcommand{\AuthorName}{Max Suica}
 
 % Setup the header and footer
 \pagestyle{fancy}                                                       %
-\lhead{\hmwkAuthorName}                                                 %
-\chead{\hmwkTitle\ : \hmwkAssignment}  %
+\lhead{\AuthorName}                                                     %
+\chead{\Title\ : \Assignment}                                           %
 \rhead{\firstxmark}                                                     %
 \lfoot{\lastxmark}                                                      %
 \cfoot{}                                                                %
@@ -60,47 +60,47 @@
    \changetext{}{+\labelLength}{}{}{}}%
 
 \setcounter{secnumdepth}{0}
-\newcommand{\homeworkProblemName}{}%
-\newcounter{homeworkProblemCounter}%
-\newenvironment{homeworkProblem}[1][Problem \arabic{homeworkProblemCounter}]%
-  {\stepcounter{homeworkProblemCounter}%
-   \renewcommand{\homeworkProblemName}{#1}%
-   \section{\homeworkProblemName}%
-   \enterProblemHeader{\homeworkProblemName}}%
-  {\exitProblemHeader{\homeworkProblemName}}%
+\newcommand{\ProblemName}{}%
+\newcounter{ProblemCounter}%
+\newenvironment{Problem}[1][Problem \arabic{ProblemCounter}]%
+  {\stepcounter{ProblemCounter}%
+   \renewcommand{\ProblemName}{#1}%
+   \section{\ProblemName}%
+   \enterProblemHeader{\ProblemName}}%
+  {\exitProblemHeader{\ProblemName}}%
 
 \newcommand{\problemAnswer}[1]
   {\noindent\fbox{\begin{minipage}[c]{\columnwidth}#1\end{minipage}}}%
 
 \newcommand{\problemLAnswer}[1]
-  {\labelAnswer{\homeworkProblemName}{#1}}
+  {\labelAnswer{\ProblemName}{#1}}
 
-\newcommand{\homeworkSectionName}{}%
-\newlength{\homeworkSectionLabelLength}{}%
-\newenvironment{homeworkSection}[1]%
+\newcommand{\SectionName}{}%
+\newlength{\SectionLabelLength}{}%
+\newenvironment{Section}[1]%
   {% We put this space here to make sure we're not connected to the above.
    % Otherwise the changetext can do funny things to the other margin
 
-   \renewcommand{\homeworkSectionName}{#1}%
-   \settowidth{\homeworkSectionLabelLength}{\homeworkSectionName}%
-   \addtolength{\homeworkSectionLabelLength}{0.25in}%
-   \changetext{}{-\homeworkSectionLabelLength}{}{}{}%
-   \subsection{\homeworkSectionName}%
-   \enterProblemHeader{\homeworkProblemName\ [\homeworkSectionName]}}%
-  {\enterProblemHeader{\homeworkProblemName}%
+   \renewcommand{\SectionName}{#1}%
+   \settowidth{\SectionLabelLength}{\SectionName}%
+   \addtolength{\SectionLabelLength}{0.25in}%
+   \changetext{}{-\SectionLabelLength}{}{}{}%
+   \subsection{\SectionName}%
+   \enterProblemHeader{\ProblemName\ [\SectionName]}}%
+  {\enterProblemHeader{\ProblemName}%
 
    % We put the blank space above in order to make sure this margin
    % change doesn't happen too soon (otherwise \sectionAnswer's can
    % get ugly about their \marginpar placement.
-   \changetext{}{+\homeworkSectionLabelLength}{}{}{}}%
+   \changetext{}{+\SectionLabelLength}{}{}{}}%
 
 \newcommand{\sectionAnswer}[1]
   {% We put this space here to make sure we're disconnected from the previous
    % passage
 
    \noindent\fbox{\begin{minipage}[c]{\columnwidth}#1\end{minipage}}%
-   \enterProblemHeader{\homeworkProblemName}\exitProblemHeader{\homeworkProblemName}%
-   \marginpar{\fbox{\homeworkSectionName}}%
+   \enterProblemHeader{\ProblemName}\exitProblemHeader{\ProblemName}%
+   \marginpar{\fbox{\SectionName}}%
 
    % We put the blank space above in order to make sure this
    % \marginpar gets correctly placed.
@@ -111,11 +111,11 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Make title
-\title{\vspace{2in}\textmd{\textbf{\hmwkTitle}}
-\\\normalsize\vspace{0.1in}{\hmwkBookAuthors}
+\title{\vspace{2in}\textmd{\textbf{\Title}}
+\\\normalsize\vspace{0.1in}{\BookAuthors}
 \\\vspace{0.1in}\large{\textit{\ }}\vspace{3in}}
 \date{}
-\author{\textbf{\hmwkAuthorName}}
+\author{\textbf{\AuthorName}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
@@ -131,39 +131,42 @@
 %\newpage
 
 % When problems are long, it may be desirable to put a \newpage or a
-% \clearpage before each homeworkProblem environment
+% \clearpage before each Problem environment
 
 \clearpage
-\section{\hmwkAssignment\ Exercises}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{\Assignment\ Exercises}
 
 
-\begin{homeworkProblem} Prove that if $A \cup B = A$ and $A \cap B = A$ then $A = B$.\\
+\begin{Problem} Prove that if $A \cup B = A$ and $A \cap B = A$ then $A = B$.\\
 
 \problemAnswer{
 To show this we observe that $A \cup B = A$ implies $B \subset A$, while $A \cap B = A$ implies $A \subset B$. But then we have the definition of equality of two sets and $A = B$.
 }
-\end{homeworkProblem}
+\end{Problem}
 
 
-\begin{homeworkProblem} Show that in general $(A - B) \cup B \ne B$.\\
+\begin{Problem} Show that in general $(A - B) \cup B \ne B$.\\
 
 \problemAnswer{
 Suppose that $A$ is not a subset of $B$. Then $(A - B)$ contains at least one element contained in $A$ alone. Thus the expression $(A - B) \cup B \ne B$ is valid in the general case.
 }
-\end{homeworkProblem}
+\end{Problem}
 
 
-\begin{homeworkProblem}
+\begin{Problem}
 Let $ A = \{2,4,...,2n,...\}$ and $B =\{3,6,...,3n,...\}$. Find $A \cap B$ and $A - B$.\\
 
 \problemAnswer{
 $$A \cap B = \{a \in \mathbb{N} \mid (2 \mid a \wedge 3 \mid a)\} = \{6,12,...,6n,...\}$$
 $$A-B = \{a \in \mathbb{N} \mid (2 \mid a \wedge 3\nmid a)\} = \{2,4,8,10,..., 6n-4, 6n-2 \}$$
 }
-\end{homeworkProblem}
+\end{Problem}
 
 
-\begin{homeworkProblem}
+\begin{Problem}
 Prove that
 \begin {enumerate}[a)]
  \item a) $(A-B) \cap C = (A \cap C) - (B \cap C))$
@@ -172,50 +175,42 @@ Prove that
 
 \problemAnswer{
 \begin{enumerate}[a)]
+
   \item We use the notation $AB$ to denote intersections and $A+B$ to denote unions, and $A^c$ to denote the complement of $A$ relative to some set $\Omega$ which is a superset of the sets in our discourse. Then the difference between two sets may be written as an intersection, $A - B = AB^c$. Then
-$$(A-B) \cap C      =
-         AB^cC      =
-  AB^cC + \emptyset =
-      ACB^c + ACC^c =
-      AC(B^c + C^c) =
-           AC(BC)^c =
-      (A \cap C) - (B \cap C) $$
+$$(A-B) \cap C = AB^cC = AB^cC + \emptyset = ACB^c + ACC^c = AC(B^c + C^c) = AC(BC)^c = (A \cap C) - (B \cap C) $$
+
   \item To show this we state the definition $A \bigtriangleup B = AB^c + A^cB$. Then
-$$ (A \cup B) - (A \cap B)      =
-   (A+B)(AB)^c = (A+B)(A^c+B^c) =
-   AA^c + AB^c + A^cB + BB^c    = 
-   AB^c + A^cB                  = 
-   A \bigtriangleup B $$
+$$ (A \cup B) - (A \cap B) = (A+B)(AB)^c = (A+B)(A^c+B^c) = AA^c + AB^c + A^cB + BB^c = AB^c + A^cB = A \bigtriangleup B $$
 \end{enumerate}
 }
 %% I would like to annotate this with rules, either underneath each step, or as a
 %% Progressive column of equations and reasons.
-\end{homeworkProblem}
+\end{Problem}
 
 
 \clearpage
 
-\begin{homeworkProblem}
+\begin{Problem}
 Prove that
 $$\bigcup_\alpha A_\alpha - \bigcup_\alpha B_\alpha \subset \bigcup_\alpha (A_\alpha - B_\alpha)$$\\
 
 \problemAnswer{
 First we rewrite the problem as
-$$\left(\bigcup_\alpha A_\alpha\right) \cap \left(\bigcup_\alpha B_\alpha\right)^c \subset \bigcup_\alpha (A_\alpha \cap B_\alpha^c)$$
-Through deMorgan's law and the distributive property we observe that
+$$\left(\bigcup_\alpha A_\alpha\right) \cap \left(\bigcup_\alpha B_\alpha\right)^c \subset \bigcup_\alpha \left( A_\alpha \cap B_\alpha^c \right) $$
+Through deMorgan's law and the distributive property we see that
 $$\left(\bigcup_\alpha A_\alpha\right) \cap \left(\bigcup_\alpha B_\alpha\right)^c =
-  \bigcup_\alpha \left(A_\alpha\ \cap \ \bigcap_\alpha B_\alpha^c\right) $$
-Since $\bigcap_\alpha B_\alpha^c \subset B_\alpha^c$ for each $\alpha$, we can see clearly that our set on the left is a subset of the one on the .
+  \bigcup_\alpha \left(A_\alpha\ \cap \ \bigcap_\alpha B_\alpha^c\right).$$
+Here it's clear that $\bigcap_\alpha B_\alpha^c \subset B_\alpha^c$ for each, $\alpha$. But then $A_\alpha \cap (\bigcap_\alpha B_\alpha^c)$ is a subset of  $A_\alpha \cap B_\alpha^c$ for each $\alpha$, proving the formula.
 }
-\end{homeworkProblem}\\\\\\\\\\\\\\
+\end{Problem}
 
 
-\begin{homeworkProblem}
+\begin{Problem}
 Let $A_n$ be the set of all positive integers divisible by $n$. Find the sets
 
 \begin{enumerate}[a)]
-  \item $$\displaystyle{\bigcup_{n=2}^\infty A_n}$$
-  \item $$\displaystyle \bigcap_{n=2}^\infty A_n$$.
+  \item $\displaystyle{\bigcup_{n=2}^\infty A_n}$
+  \item $\displaystyle \bigcap_{n=2}^\infty A_n$.
 \end{enumerate}
 
 \problemAnswer{
@@ -224,33 +219,31 @@ Let $A_n$ be the set of all positive integers divisible by $n$. Find the sets
   \item Here the set contains elements which must be divisible by every integer $n \ge 2$, of which there are no positive integers. Our answer is $\emptyset$.
 \end{enumerate}
 }
-\end{homeworkProblem}
+\end{Problem}
 
 \clearpage
 
-\begin{homeworkProblem}
+\begin{Problem}
 Find the sets
 
 \begin{enumerate}[a)]
-  \item $$\displaystyle{\bigcup_{n=1}^\infty \left[ a+\frac{1}{n}, b-\frac{1}{n} \right]}$$
-  \item $$\displaystyle \bigcap_{n=1}^\infty \left(a-\frac{1}{n},b+\frac{1}{n}\right)$$
+  \item $\displaystyle{\bigcup_{n=1}^\infty \left[a+\frac{1}{n},b-\frac{1}{n} \right]}$
+  \item $\displaystyle \bigcap_{n=1}^\infty \left(a-\frac{1}{n},b+\frac{1}{n}\right)$
 \end{enumerate}
 
 \problemAnswer{
 \begin{enumerate}[a)]
   \item Since $\left[ a+\frac{1}{n}, b-\frac{1}{n} \right] \subset \left[ a+\frac{1}{m}, b-\frac{1}{m} \right]$ if $n \le m$, it suffices to consider
-$$\bigcup_{n=1}^\infty \left[ a+\frac{1}{n}, b-\frac{1}{n} \right] =
-  \lim_{n\rightarrow\infty} \left[ a+\frac{1}{n}, b-\frac{1}{n} \right] =
-   \left( a, b \right)$$.\\
+  $$\bigcup_{n=1}^\infty \left[ a+\frac{1}{n}, b-\frac{1}{n} \right] = \lim_{n\rightarrow\infty} \left[ a+\frac{1}{n}, b-\frac{1}{n} \right] = \left( a, b \right)$$.\\
 
   \item Similarly, here $\left(a-\frac{1}{n},b+\frac{1}{n}\right) \supset \left(a-\frac{1}{m},b+\frac{1}{m}\right)$ if $n \leq m$, so
 $$ \bigcap_{n=1}^\infty \left(a-\frac{1}{n},b+\frac{1}{n}\right) = \lim_{n\rightarrow\infty} \left(a-{1 \over n}, b + {1 \over n}\right) = \left[a,b\right]$$
 \end{enumerate}
 }
-\end{homeworkProblem}\\\\\\\\
+\end{Problem}\\\\\\\\
 
 
-\begin{homeworkProblem}
+\begin{Problem}
 Let $A_\alpha$ be the set of points lying on the curve
 $$y = \frac{1}{x^\alpha} \ \ \ \ (0 < x < \infty).$$
 What is
@@ -260,11 +253,11 @@ $$\bigcap_{\alpha \ge 1} A_\alpha \ \rm{?}$$
 We consider any two curves $A_\alpha$ and $A_\beta$, where $\alpha,\beta \ge 1$, $\alpha \neq \beta$. A point $(a,a^{-\alpha}) \in A_\alpha$ is a member of $A_\beta$ only if $a^{-\alpha} = a^{-\beta}$. But then we must have $a = 1$, and so our result is
 $$\bigcap_{\alpha \ge 1} A_\alpha = (1,1).$$
 }
-\end{homeworkProblem}
+\end{Problem}
 
 \clearpage
 
-\begin{homeworkProblem}
+\begin{Problem}
 Let $y = f(x) = \langle x \rangle$ for all real $x$, where $\langle x \rangle$ is the fractional part of $x$. Prove that every closed interval of length 1 has the same image under $f$. What is this image? If $f$ one-to-one? What is the pre-image of the interval $\frac{1}{4} \le y \le \frac{3}{4}$? Partition the real line into classes of points with the same image.\\
 
 \problemAnswer{
@@ -278,19 +271,19 @@ $$f^{-1} \left[\frac{1}{4}, \frac{3}{4}\right] = \bigcup_{n \in \mathbb{Z}} \lef
 In general we can partition the real line into a family of sets $A_\alpha$, where $\alpha \in [0,1)$, such that
 $$A_\alpha = \{a \mid a = \alpha +n,\ n \in \mathbb{Z}\}$$
 }
-\end{homeworkProblem}
+\end{Problem}
 
 
-\begin{homeworkProblem}
+\begin{Problem}
 Given a set $M$, let $\mathcal{R}$ be the set of all ordered pairs of of the form $(a,a)$ where $a \in M$, and let $aRb$ if and only if $(a,b) \in \mathcal{R}$. Interpret the relation $R$.\\
 
 \problemAnswer{
 An interpretation of $R$ is simple, since it is just the equality relation on the set $M$. To see this we note that $(a,b) \in \mathcal{R}$ if and only if $a = b$. But then since $aRb$ if and only if $a = b$, $R$ is equivalent to the equality relation.
 }
-\end{homeworkProblem}
+\end{Problem}
 
 
-\begin{homeworkProblem}
+\begin{Problem}
 Give and example of a binary relation which is
 
 \begin{enumerate}[a)]
@@ -303,18 +296,18 @@ Give and example of a binary relation which is
 \problemAnswer{
 \begin{enumerate}[a)]
   \item $$aRb \Leftrightarrow \rm{gcd}(a,b) \ne 1$$
-    T check our properties can start out and say that the 
+    T check our properties can start out and say that the
     relation is reflexive since $aRa$ is cleary true. The
     rule $\rm{gdc}(a,b) = \rm{gdc}(b,a)$ implies that
-    we have symmetry. Finally, for the transitive property 
-    we construct $20R8$, $8R21$. But $20R21$ show it's not transitive. 
+    we have symmetry. Finally, for the transitive property
+    we construct $20R8$, $8R21$. But $20R21$ show it's not transitive.
   \item We choose an special element $\hat{a}$ and define the relation $aRb /Rightleftarrow a = or $
   \item $$aRb \Leftrightarrow \rm{gcd}(a,b) = 1$$
         To show that this relation is non reflexive it is enough to observe that $\rm{gcd}(a,a) = a$. It is symmetric since $\rm{gcd}(a,b) = \rm{gcd}(b, a)$. Now We check that they are non transitive. Consider numbers $a, b, c$. Let $a$ and $c$ be not co-prime. But let them be coprime to $b$. Then $aRb$ and $bRc$ is true, while $aRc$ does not apply.
   \item The relation is $>$ on the real numbers. It's only transitive, no reflexivity or symmetry.
 \end{enumerate}
 }
-\end{homeworkProblem}
+\end{Problem}
 
 
 \end{spacing}
