Fixed underscore error in template.

--- a/ProblemsTemplate.tex
+++ b/ProblemsTemplate.tex
@@ -21,7 +21,7 @@
 
 % Homework Specific Information
 \newcommand{\Title}{Introductory Real Analyis Exercises}
-\newcommand{\Assignment}{Chaper __}
+\newcommand{\Assignment}{Chaper \_}
 \newcommand{\BookAuthors}{A.Kolmogorov \& S.Fomin}
 \newcommand{\AuthorName}{Max Suica}
 
@@ -126,24 +126,24 @@
 % Uncomment the \tableofcontents and \newpage lines to get a Contents page
 % Uncomment the \setcounter line as well if you do NOT want subsections
 %       listed in Contents
-%\setcounter{tocdepth}{1}                                                 %
-%\tableofcontents                                                         %
-%\newpage                                                                 %
+%\setcounter{tocdepth}{1}
+%\tableofcontents
+%\newpage
 
 % When problems are long, it may be desirable to put a \newpage or a
 % \clearpage before each Problem environment
 
 \clearpage
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{\Assignment\ Exercises}
 
 
-\begin{Problem}
+\begin{Problem} Example problem.\\
 
 \problemAnswer{
-
+Example answer.
 }
 \end{Problem}
 
