--- a/Chap1.2.tex
+++ b/Chap1.2.tex
@@ -19,18 +19,16 @@
 \textheight=9.0in       %
 \headsep=0.25in         %
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Homework Specific Information                              % % % % % 
-\newcommand{\hmwkTitle}{Introductory Real Analyis Exercises}  % % % % %
-\newcommand{\hmwkAssignment}{Chaper 1.2}                       % % % % %
-\newcommand{\hmwkBookAuthors}{A.Kolmogorov \& S.Fomin}          % % % % %
-\newcommand{\hmwkAuthorName}{Max Suica}                          % % % % %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Homework Specific Information
+\newcommand{\Title}{Introductory Real Analyis Exercises}
+\newcommand{\Assignment}{Chaper 1.2}
+\newcommand{\BookAuthors}{A.Kolmogorov \& S.Fomin}
+\newcommand{\AuthorName}{Max Suica}
 
 % Setup the header and footer
 \pagestyle{fancy}                                                       %
-\lhead{\hmwkAuthorName}                                                 %
-\chead{\hmwkTitle\ : \hmwkAssignment}                                   %
+\lhead{\AuthorName}                                                     %
+\chead{\Title\ : \Assignment}                                           %
 \rhead{\firstxmark}                                                     %
 \lfoot{\lastxmark}                                                      %
 \cfoot{}                                                                %
@@ -62,47 +60,47 @@
    \changetext{}{+\labelLength}{}{}{}}%
 
 \setcounter{secnumdepth}{0}
-\newcommand{\homeworkProblemName}{}%
-\newcounter{homeworkProblemCounter}%
-\newenvironment{homeworkProblem}[1][Problem \arabic{homeworkProblemCounter}]%
-  {\stepcounter{homeworkProblemCounter}%
-   \renewcommand{\homeworkProblemName}{#1}%
-   \section{\homeworkProblemName}%
-   \enterProblemHeader{\homeworkProblemName}}%
-  {\exitProblemHeader{\homeworkProblemName}}%
+\newcommand{\ProblemName}{}%
+\newcounter{ProblemCounter}%
+\newenvironment{Problem}[1][Problem \arabic{ProblemCounter}]%
+  {\stepcounter{ProblemCounter}%
+   \renewcommand{\ProblemName}{#1}%
+   \section{\ProblemName}%
+   \enterProblemHeader{\ProblemName}}%
+  {\exitProblemHeader{\ProblemName}}%
 
 \newcommand{\problemAnswer}[1]
   {\noindent\fbox{\begin{minipage}[c]{\columnwidth}#1\end{minipage}}}%
 
 \newcommand{\problemLAnswer}[1]
-  {\labelAnswer{\homeworkProblemName}{#1}}
+  {\labelAnswer{\ProblemName}{#1}}
 
-\newcommand{\homeworkSectionName}{}%
-\newlength{\homeworkSectionLabelLength}{}%
-\newenvironment{homeworkSection}[1]%
+\newcommand{\SectionName}{}%
+\newlength{\SectionLabelLength}{}%
+\newenvironment{Section}[1]%
   {% We put this space here to make sure we're not connected to the above.
    % Otherwise the changetext can do funny things to the other margin
 
-   \renewcommand{\homeworkSectionName}{#1}%
-   \settowidth{\homeworkSectionLabelLength}{\homeworkSectionName}%
-   \addtolength{\homeworkSectionLabelLength}{0.25in}%
-   \changetext{}{-\homeworkSectionLabelLength}{}{}{}%
-   \subsection{\homeworkSectionName}%
-   \enterProblemHeader{\homeworkProblemName\ [\homeworkSectionName]}}%
-  {\enterProblemHeader{\homeworkProblemName}%
+   \renewcommand{\SectionName}{#1}%
+   \settowidth{\SectionLabelLength}{\SectionName}%
+   \addtolength{\SectionLabelLength}{0.25in}%
+   \changetext{}{-\SectionLabelLength}{}{}{}%
+   \subsection{\SectionName}%
+   \enterProblemHeader{\ProblemName\ [\SectionName]}}%
+  {\enterProblemHeader{\ProblemName}%
 
    % We put the blank space above in order to make sure this margin
    % change doesn't happen too soon (otherwise \sectionAnswer's can
    % get ugly about their \marginpar placement.
-   \changetext{}{+\homeworkSectionLabelLength}{}{}{}}%
+   \changetext{}{+\SectionLabelLength}{}{}{}}%
 
 \newcommand{\sectionAnswer}[1]
   {% We put this space here to make sure we're disconnected from the previous
    % passage
 
    \noindent\fbox{\begin{minipage}[c]{\columnwidth}#1\end{minipage}}%
-   \enterProblemHeader{\homeworkProblemName}\exitProblemHeader{\homeworkProblemName}%
-   \marginpar{\fbox{\homeworkSectionName}}%
+   \enterProblemHeader{\ProblemName}\exitProblemHeader{\ProblemName}%
+   \marginpar{\fbox{\SectionName}}%
 
    % We put the blank space above in order to make sure this
    % \marginpar gets correctly placed.
@@ -113,11 +111,11 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Make title
-\title{\vspace{2in}\textmd{\textbf{\hmwkTitle}}
-\\\normalsize\vspace{0.1in}{\hmwkBookAuthors}
+\title{\vspace{2in}\textmd{\textbf{\Title}}
+\\\normalsize\vspace{0.1in}{\BookAuthors}
 \\\vspace{0.1in}\large{\textit{\ }}\vspace{3in}}
 \date{}
-\author{\textbf{\hmwkAuthorName}}
+\author{\textbf{\AuthorName}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
@@ -128,41 +126,39 @@
 % Uncomment the \tableofcontents and \newpage lines to get a Contents page
 % Uncomment the \setcounter line as well if you do NOT want subsections
 %       listed in Contents
-%\setcounter{tocdepth}{1}
-%\tableofcontents
-%\newpage
+%\setcounter{tocdepth}{1}                                                 %
+%\tableofcontents                                                         %
+%\newpage                                                                 %
 
 % When problems are long, it may be desirable to put a \newpage or a
-% \clearpage before each homeworkProblem environment
-
-
-
-
+% \clearpage before each Problem environment
 
 \clearpage
-\section{\hmwkAssignment\ Exercises}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{\Assignment\ Exercises}
 
 
-
-\begin{hmwkAssignment}
+\begin{Problem}
 Prove that a set with an uncountable subset is itself uncountable.
 
 \problemAnswer{
 
 }
-\end{hmwkAssignment}
+\end{Problem}
 
 
-\begin{hmwkAssignment}
+\begin{Problem}
 Let $M$ be any infinite set and $A$ any countable set. Prove that $M ~ M \cup A.$
 
 \problemAnswer{
 
 }
-\end{hmwkAssignment}
+\end{Problem}
 
 
-\begin{hmwkAssignment}
+\begin{Problem}
 Prove that each of the following sets is countable:
 
 %begin{enumerate}
@@ -175,7 +171,7 @@ Prove that each of the following sets is countable:
 \problemAnswer{
 
 }
-\end{hmwkAssignment}
+\end{Problem}
 
 \end{spacing}
 \end{document}
