Wrote section 2 problems.

--- a/Chap1.2.tex
+++ b/Chap1.2.tex
@@ -106,10 +106,6 @@
    % \marginpar gets correctly placed.
    }%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Make title
 \title{\vspace{2in}\textmd{\textbf{\Title}}
 \\\normalsize\vspace{0.1in}{\BookAuthors}
@@ -136,7 +132,7 @@
 \clearpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{\Assignment\ Exercises}
 
 
@@ -144,7 +140,7 @@
 Prove that a set with an uncountable subset is itself uncountable.
 
 \problemAnswer{
-
+Given a set $M$ with an uncountable subset $A$ we can see that the $M$ is uncountable since any counting of must eventually count all the elements of $A$, which is impossible.
 }
 \end{Problem}
 
@@ -163,10 +159,72 @@ Prove that each of the following sets is countable:
 
 %begin{enumerate}
 %\item The set of all numbers with two distinct decimal expansions (like 0.50000  and 0.4999 . 
-%\item
-%\item
-%\item
+%\item The set of akk rational points in the plane.
+%\item The set of all rational intervals.
+%\item The set of all polynomials with rational coefficients.
 %\end{enumerate}
+
+\problemAnswer{
+
+}
+\end{Problem}
+
+\begin{Problem}
+A number $\alpha$ is called \textit{algebraic} if it is the roof of a polynomial equation with rational coefficients. Prove that the set of all algebraic numbers is countable.
+
+\problemAnswer{
+
+}
+\end{Problem}
+
+\begin{Problem}
+Prove the existance of uncountably many \textit{transcendental} numbers.
+
+\problemAnswer{
+
+}
+\end{Problem}
+
+\begin{Problem}
+Prove that the set of all real functions defined on a set $M$ is of power greater than the power of $M$. In particular, prove that the power of the set of all real functions defined in the unit interval is greater tha \textit{c}. (Use the fact that the set of charachteristic functions on $M$ is equivalent to the set of all subsets of $M$.
+
+\problemAnswer{
+
+}
+\end{Problem}
+
+\begin{Problem}
+Give an indirect proof of the equivalence of the closed interval $[a,b]$, the open interval $(a,b)$, and the half open interval $(a,b]$ or $[b,a)$.
+
+\problemAnswer{
+
+}
+\end{Problem}
+
+\begin{Problem}
+Prove that the union of a finite or countable number of set each of power \textit{c} is itself of power \textit{c}.
+
+\problemAnswer{
+
+}
+\end{Problem}
+
+\begin{Problem}
+Proce that each of the following sets has the power of the continuum:
+
+\begin{enumerate}[a)]
+	\item The set of all infinite sequences of positive integers.
+	\item The set of all ordered \textit{n}-tuples of real numbers.
+	\item The set of all infinite sequences of real numbers.
+\end{enumerate}
+
+\problemAnswer{
+
+}
+\end{Problem}
+
+\begin{Problem}
+Develop a contradiction inherent in the notion of the "set of all sets which are not members of themselves."'
 
 \problemAnswer{
 
