Fixed answer box spacing issue.

--- a/ProblemsTemplate.tex
+++ b/ProblemsTemplate.tex
@@ -70,7 +70,7 @@
   {\exitProblemHeader{\ProblemName}}%
 
 \newcommand{\problemAnswer}[1]
-  {\noindent\fbox{\begin{minipage}[c]{\columnwidth}#1\end{minipage}}}%
+  {\ \\ \noindent\fbox{\begin{minipage}[c]{\columnwidth}#1\end{minipage}}}%
 
 \newcommand{\problemLAnswer}[1]
   {\labelAnswer{\ProblemName}{#1}}
@@ -140,7 +140,7 @@
 \section{\Assignment\ Exercises}
 
 
-\begin{Problem} Example problem.\\
+\begin{Problem} Example problem.
 
 \problemAnswer{
 Example answer.
