--- a/Chap1.2.tex
+++ b/Chap1.2.tex
@@ -70,7 +70,7 @@
   {\exitProblemHeader{\ProblemName}}%
 
 \newcommand{\problemAnswer}[1]
-  {\noindent\fbox{\begin{minipage}[c]{\columnwidth}#1\end{minipage}}}%
+  {\ \\ \noindent\fbox{\begin{minipage}[c]{\columnwidth}#1\end{minipage}}}%
 
 \newcommand{\problemLAnswer}[1]
   {\labelAnswer{\ProblemName}{#1}}
@@ -106,6 +106,10 @@
    % \marginpar gets correctly placed.
    }%
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Make title
 \title{\vspace{2in}\textmd{\textbf{\Title}}
 \\\normalsize\vspace{0.1in}{\BookAuthors}
@@ -122,17 +126,16 @@
 % Uncomment the \tableofcontents and \newpage lines to get a Contents page
 % Uncomment the \setcounter line as well if you do NOT want subsections
 %       listed in Contents
-%\setcounter{tocdepth}{1}                                                 %
-%\tableofcontents                                                         %
-%\newpage                                                                 %
+%\setcounter{tocdepth}{1}
+%\tableofcontents
+%\newpage
 
 % When problems are long, it may be desirable to put a \newpage or a
 % \clearpage before each Problem environment
 
 \clearpage
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\Assignment\ Exercises}
 
 
@@ -140,7 +143,7 @@
 Prove that a set with an uncountable subset is itself uncountable.
 
 \problemAnswer{
-Given a set $M$ with an uncountable subset $A$ we can see that the $M$ is uncountable since any counting of must eventually count all the elements of $A$, which is impossible.
+Given a set $M$ with an uncountable subset $A$ we can see that the set $M$ is uncountable since any counting of $M$ must eventually count all the elements of $A$, which is impossible.
 }
 \end{Problem}
 
