--- a/Chap1.2.tex
+++ b/Chap1.2.tex
@@ -20,8 +20,8 @@
 \headsep=0.25in         %
 
 % Homework Specific Information
-\newcommand{\Title}{Introductory Real Analyis Exercises}
-\newcommand{\Assignment}{Chaper 1.2}
+\newcommand{\Title}{Introductory Real Analysis Exercises}
+\newcommand{\Assignment}{Chapter 1.2}
 \newcommand{\BookAuthors}{A.Kolmogorov \& S.Fomin}
 \newcommand{\AuthorName}{Max Suica}
 
@@ -143,16 +143,22 @@
 Prove that a set with an uncountable subset is itself uncountable.
 
 \problemAnswer{
-Given a set $M$ with an uncountable subset $A$ we can see that the set $M$ is uncountable since any counting of $M$ must eventually count all the elements of $A$, which is impossible.
+Given a set $M$ with an uncountable subset $A$ we can see that any counting of $M$ must eventually count all the elements of $A$, which is impossible.
 }
 \end{Problem}
 
 
 \begin{Problem}
-Let $M$ be any infinite set and $A$ any countable set. Prove that $M ~ M \cup A.$
+Let $M$ be any infinite set and $A$ any countable set. Prove that $M \sim M \cup A.$
 
 \problemAnswer{
-
+Let $M' = \{m_1, m2, m3 \ldots\}$ be a countable subset of $M$ and write $A =\{a_1, a_2, a_3, \ldots\}$. Define $f:M \rightarrow M \cup A$ as a mapping that carries $M - M'$ into itself and maps $M'$ thusly
+$$f(m_k) = \left\{ 
+\begin{array}{l l}
+  m_{(k+1)/2} & \quad \text{if $k$ is odd}\\
+  a_{(k/2)} & \quad \text{if $k$ is even}\\
+\end{array} \right.$$
+Then $f$ is a one to one mapping.
 }
 \end{Problem}
 
@@ -160,15 +166,20 @@ Let $M$ be any infinite set and $A$ any countable set. Prove that $M ~ M \cup A.
 \begin{Problem}
 Prove that each of the following sets is countable:
 
-%begin{enumerate}
-%\item The set of all numbers with two distinct decimal expansions (like 0.50000  and 0.4999 . 
-%\item The set of akk rational points in the plane.
-%\item The set of all rational intervals.
-%\item The set of all polynomials with rational coefficients.
-%\end{enumerate}
+\begin{enumerate}
+\item The set of all numbers with two distinct decimal expansions (like 0.50000  and 0.4999 . 
+\item The set of all rational points in the plane.
+\item The set of all rational intervals.
+\item The set of all polynomials with rational coefficients.
+\end{enumerate}
 
 \problemAnswer{
-
+\begin{enumerate}
+	\item The set of numbers with two decimal expansions is exactly the set with finite decimal expansions, which we can separated according to the length of their finite expansions. Since the the set numbers of a certain length is countable for each finite length, the numbers are all countable.
+	\item This is equivalent to $\mathbb{Q}^2$.
+	\item This is equivalent to a subset of $\mathbb{Q}^2$, namely $\{(a,b)\in\mathbb{Q}^2 \mid a \leq b\}.$
+	\item This is equivalent to $\mathbb{Q}^\omega$, i.e., a countable product of countable sets.
+\end{enumerate}
 }
 \end{Problem}
 
@@ -176,23 +187,23 @@ Prove that each of the following sets is countable:
 A number $\alpha$ is called \textit{algebraic} if it is the roof of a polynomial equation with rational coefficients. Prove that the set of all algebraic numbers is countable.
 
 \problemAnswer{
-
+Since the set of rational polynomials is countable and they each have a finite number of roots, the union of the roots of these polynomials must also be countable.
 }
 \end{Problem}
 
 \begin{Problem}
-Prove the existance of uncountably many \textit{transcendental} numbers.
+Prove the existence of uncountably many \textit{transcendental} numbers.
 
 \problemAnswer{
-
+The real numbers are uncountable due to an argument of Cantor, but there are only countably many algebraic numbers. Therefore the transcendental numbers must be uncountable in cardinality.
 }
 \end{Problem}
 
 \begin{Problem}
-Prove that the set of all real functions defined on a set $M$ is of power greater than the power of $M$. In particular, prove that the power of the set of all real functions defined in the unit interval is greater tha \textit{c}. (Use the fact that the set of charachteristic functions on $M$ is equivalent to the set of all subsets of $M$.
+Prove that the set of all real functions defined on a set $M$ is of power greater than the power of $M$. In particular, prove that the power of the set of all real functions defined in the unit interval is greater than \textit{c}.
 
 \problemAnswer{
-
+The set $2^M$ of characteristic functions on $M$ is of power greater than $M$. But since the characteristic functions correspond to a subset of the real functions on $M$, the power of the real functions is greater than that of $M$. Specifically, the set of real functions on $[0,1]$ must be of greater power than \textit{c}.
 }
 \end{Problem}
 
@@ -200,7 +211,7 @@ Prove that the set of all real functions defined on a set $M$ is of power greate
 Give an indirect proof of the equivalence of the closed interval $[a,b]$, the open interval $(a,b)$, and the half open interval $(a,b]$ or $[b,a)$.
 
 \problemAnswer{
-
+We can construct an injection from any of these intervals into the others using linear scaling. But then due to Cantor-Bernstein we have that they are all equivalent.
 }
 \end{Problem}
 
@@ -208,12 +219,12 @@ Give an indirect proof of the equivalence of the closed interval $[a,b]$, the op
 Prove that the union of a finite or countable number of set each of power \textit{c} is itself of power \textit{c}.
 
 \problemAnswer{
-
+We may divide the continuum into a countable number of subsets with power equal to the whole. Since each of these subsets corresponds to one of the sets in the union we have a surjection from the continuum to the union so its power is no greater than that of the continuum. Since it is a union, its power must be at least that of one of its elements, which is that of the continuum.
 }
 \end{Problem}
 
 \begin{Problem}
-Proce that each of the following sets has the power of the continuum:
+Prove that each of the following sets has the power of the continuum:
 
 \begin{enumerate}[a)]
 	\item The set of all infinite sequences of positive integers.
@@ -222,6 +233,13 @@ Proce that each of the following sets has the power of the continuum:
 \end{enumerate}
 
 \problemAnswer{
+\begin{enumerate}[a)]
+	\item By a diagonalization agrument, this set is uncountable. To see that it is power no greater than the continuum we observe that each infinite sequence $x = \{a_k\}_{k=1}^\infty$ can be mapped into the $[0,1]$ by writing each $a_k$ in base $b$, and concatenating the digits of these numbers in a base $b+1$ decimal sequence, using the digit $b+1$ as a delimiter: 
+	$$x' = 0.a_{11}a_{12}\ldots a_{1n_1}(b+1)a_{21}a_{22}\ldots a_{2n_2}(b+1)\ldots a_{k1}a_{k2}\ldots a_{kn_k}(b+1)\ldots$$
+	Thus it is of power \textit{c}.
+  \item This is a finite product of $mathbb{R}$, which has the same power as $mathbb{r}$.
+  \item This is a countable product of $mathbb{R}$, which must have the same power.
+\end{enumerate}
 
 }
 \end{Problem}
@@ -230,7 +248,7 @@ Proce that each of the following sets has the power of the continuum:
 Develop a contradiction inherent in the notion of the "set of all sets which are not members of themselves."'
 
 \problemAnswer{
-
+Given such set $\mathcal{M}$, one might ask whether it possesses the property "$\mathcal{M}$ is not member of itself". Since it is the set of sets that have this property, it must contain itself if and only if doesn't contain itself, which is contradictory.
 }
 \end{Problem}
 
