Corrected some syntax errors in problem 9.

--- a/Chap1.2.tex
+++ b/Chap1.2.tex
@@ -237,8 +237,8 @@ Prove that each of the following sets has the power of the continuum:
 	\item By a diagonalization agrument, this set is uncountable. To see that it is power no greater than the continuum we observe that each infinite sequence $x = \{a_k\}_{k=1}^\infty$ can be mapped into the $[0,1]$ by writing each $a_k$ in base $b$, and concatenating the digits of these numbers in a base $b+1$ decimal sequence, using the digit $b+1$ as a delimiter: 
 	$$x' = 0.a_{11}a_{12}\ldots a_{1n_1}(b+1)a_{21}a_{22}\ldots a_{2n_2}(b+1)\ldots a_{k1}a_{k2}\ldots a_{kn_k}(b+1)\ldots$$
 	Thus it is of power \textit{c}.
-  \item This is a finite product of $mathbb{R}$, which has the same power as $mathbb{r}$.
-  \item This is a countable product of $mathbb{R}$, which must have the same power.
+  \item This is a finite product of $\mathbb{R}$, which has the same power as $mathbb{r}$.
+  \item This is a countable product of $\mathbb{R}$, which must have the same power.
 \end{enumerate}
 
 }
