--- a/Chap1.3.tex
+++ b/Chap1.3.tex
@@ -223,8 +223,9 @@ Prove that any nonempty set of ordinals is well-ordered.
 
 \begin{Problem}
 Prove that the set $M$ of all ordinals corresponding to a countable set is itself uncountable.
-\problemAnswer{
 
+\problemAnswer{
+Suppose that $M$ is countable. Then the $M$'s ordinal $\alpha$ must be a memeber of $M$.
 }
 \end{Problem}
 
